Fixed the workload/pod field and Fixed VolumeList page jumps to backup has no data error

--- a/src/assets/styles/antd-customize/tree.less
+++ b/src/assets/styles/antd-customize/tree.less
@@ -50,7 +50,6 @@
     .tree-snapshot-start-point{
       width: 15px;
       height: 15px;
-      margin-bottom: 2px;
       display: inline-block;
       border-radius: 50%;
       background-color: hsl(209, 66%, 51%);
